Closed Bug 765388 Opened 13 years ago Closed 13 years ago

assertion: GL supports OES_EGL_image without supplying its functions.

Categories

(Core :: Graphics, defect)

x86
macOS
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla16
Tracking Status
firefox15 --- fixed
blocking-fennec1.0 --- -
fennec 15+ ---

People

(Reporter: blassey, Unassigned)

References

Details

(Whiteboard: [qa-])

Attachments

(1 file)

Attached patch patchSplinter Review
I'm getting this assertion on every start up of a debug build. Joe suggested this change and it got rid of the assertion message.
Attachment #633692 - Flags: review?(jmuizelaar)
Comment on attachment 633692 [details] [diff] [review] patch Review of attachment 633692 [details] [diff] [review]: ----------------------------------------------------------------- Please fix the typo, while you're here. The assert for this should say "OES_EGL_image" not "ARB_sync".
Attachment #633692 - Flags: feedback-
Depends on: 762259
OS: Mac OS X → All
Hardware: x86 → All
Comment on attachment 633692 [details] [diff] [review] patch The patch looks fine with the change suggested by jgilbert.
Attachment #633692 - Flags: review?(jmuizelaar) → review+
(In reply to Jeff Gilbert [:jgilbert] from comment #1) > Comment on attachment 633692 [details] [diff] [review] > patch > > Review of attachment 633692 [details] [diff] [review]: > ----------------------------------------------------------------- > > Please fix the typo, while you're here. > The assert for this should say "OES_EGL_image" not "ARB_sync". sorry for the confusion, copied the assertion from the code instead of the command line (since I had just fixed it) and wound up copying the wrong one.
Summary: assertion: GL supports ARB_sync without supplying its functions. → assertion: GL supports OES_EGL_image without supplying its functions.
(In reply to Brad Lassey [:blassey] from comment #3) > (In reply to Jeff Gilbert [:jgilbert] from comment #1) > > Comment on attachment 633692 [details] [diff] [review] > > patch > > > > Review of attachment 633692 [details] [diff] [review]: > > ----------------------------------------------------------------- > > > > Please fix the typo, while you're here. > > The assert for this should say "OES_EGL_image" not "ARB_sync". > > sorry for the confusion, copied the assertion from the code instead of the > command line (since I had just fixed it) and wound up copying the wrong one. No, actually the bug name was correct (when it was filed), since there's was typo in the NS_ERROR in the code. The typo was fixed by bug 764972, so the new name is probably better to keep, going forward.
Depends on: 764972
OS: All → Mac OS X
Hardware: All → x86
Comment on attachment 633692 [details] [diff] [review] patch The nearby typo was fixed in bug 764972, so you're free to land this with no changes.
Attachment #633692 - Flags: feedback-
Status: NEW → RESOLVED
Closed: 13 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla16
tracking-fennec: --- → ?
blocking-fennec1.0: --- → ?
Comment on attachment 633692 [details] [diff] [review] patch [Approval Request Comment] Bug caused by (feature/regressing bug #): User impact if declined: Testing completed (on m-c, etc.): 1 day on m-c Risk to taking this patch (and alternatives if risky): seemingly little, we were looking for the wrong symbol to load String or UUID changes made by this patch:
Attachment #633692 - Flags: approval-mozilla-beta?
Attachment #633692 - Flags: approval-mozilla-aurora?
Comment on attachment 633692 [details] [diff] [review] patch [Triage Comment] Approving for Aurora, since we're considering for 14.0.1 inclusion.
Attachment #633692 - Flags: approval-mozilla-aurora? → approval-mozilla-aurora+
We won't have occasion to use this in 14, so it shouldn't be on beta.
tracking-fennec: ? → 15+
blocking-fennec1.0: ? → -
Attachment #633692 - Flags: approval-mozilla-beta? → approval-mozilla-beta-
Blocks: 728524
This code isn't on 15, so marking unaffected. Will clear the aurora approval as well.
Attachment #633692 - Flags: approval-mozilla-aurora+ → approval-mozilla-aurora-
Attachment #633692 - Flags: approval-mozilla-beta- → approval-mozilla-beta?
We use EGLImage for the Flash patch (bug 687267), which we are trying to get into 15. Marking 15 affected.
Comment on attachment 633692 [details] [diff] [review] patch Thanks for updating the status, approving.
Attachment #633692 - Flags: approval-mozilla-beta? → approval-mozilla-beta+
Whiteboard: [qa-]
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: