Bug 765388 - assertion: GL supports OES_EGL_image without supplying its functions r=jrmuizel a=lsblakk